committing some changes after fixing my fetch code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Weather Dashboard</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://bucky-cors-proxy.herokuapp.com/fetch.js"></script>
+<!-- added the script above because I kept getting a CORS error after I created a fetch and when I was checking my code in the console -->
 </head>
 <body>
     <nav class = "nav-bar">
@@ -35,9 +37,9 @@
 
 
 
-
-
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
