--- a/index.html
+++ b/index.html
@@ -11,35 +11,41 @@
     <!-- added the script above because I kept getting a CORS error after I created a fetch and when I was checking my code in the console -->
 </head>
 
-<body>
-    <nav class="nav-bar">
+<body class="container">
+    <nav class="nav-bar justify-content-center d-flex">
         <h1> Weather Dashboard</h1>
     </nav>
-    <div class="container-1">
-        <h2>5-Day Forecast</h2>    
-    </div>
+    <div class="row col-4">
+        <div class="container">
+            <h3> Search for a City</h3>
+            <div class="city-search">
+                <input type="text" id="search-input">
+                <button type="button" id="search-button">Search</button>
+            </div>
 
-    <div class="forecast-cards d-flex flex-row">
-        
+            <div class="city-buttons d-flex flex-column">
+                <button type="button">New York</button>
+                <button type="button">Los Angeles</button>
+                <button type="button">Chicago</button>
+                <button type="button">San Francisco</button>
+                <button type="button">Seattle</button>
+                <button type="button">Atlanta</button>
+                <button type="button">Houston</button>
+                <button type="button">Miami</button>
+            </div>
+        </div>
     </div>
+   
 
-    <div class="container-2 w-25">
-        <h3> Search for a City</h3>
-        <div class="city-search">
-         <input type="text" id="search-input">
-         <button type="button" id="search-button">Search</button>
+    <div>
+        <div class="forecast col-8">
+            <div class="container">
+                <h2>5-Day Forecast</h2>
+            </div>
+            <div class="forecast-cards d-flex flex-row">
+            </div>
         </div>
 
-        <div class="city-buttons d-flex flex-column">
-            <button type="button">New York</button>
-            <button type="button">Los Angeles</button>
-            <button type="button">Chicago</button>
-            <button type="button">San Francisco</button>
-            <button type="button">Seattle</button>
-            <button type="button">Atlanta</button>
-            <button type="button">Houston</button>
-            <button type="button">Miami</button>
-        </div>
     </div>
 
 
