committing after a private tutor session

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="nav-bar justify-content-center d-flex">
         <h1> Weather Dashboard</h1>
     </nav>
+<main class="main-forecast d-flex">
     <div class="row col-4">
         <div class="container">
             <h3> Search for a City</h3>
@@ -35,9 +36,16 @@
             </div>
         </div>
     </div>
-   
+    <div class="forecast col-8">
+        <div class="container">
+            <h2>5-Day Forecast</h2>
+        </div>
+        <div class="forecast-cards d-flex flex-row">
+        </div>
+    </div>
+</main>
 
-    <div>
+    <!-- <div>
         <div class="forecast col-8">
             <div class="container">
                 <h2>5-Day Forecast</h2>
@@ -46,7 +54,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
 
 
