committing some changes for the container withe current day weather but frustrated because nothing aligns and I can't get the date format to update so its readable

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         </div>
     </div>
     <div class="forecast col-8">
+        <div class="single-day d-flex flex-row text-align">
+            
+        </div>
         <div class="container">
             <h2>5-Day Forecast</h2>
         </div>
