--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
             </div>
 
             <div class="city-buttons d-flex flex-column">
-                <button type="button">New York</button>
-                <button type="button">Los Angeles</button>
-                <button type="button">Chicago</button>
-                <button type="button">San Francisco</button>
-                <button type="button">Seattle</button>
-                <button type="button">Atlanta</button>
-                <button type="button">Houston</button>
-                <button type="button">Miami</button>
+                <button type="button" class="btn btn-primary mt-3" >New York</button>
+                <button type="button" class="btn btn-primary mt-3">Los Angeles</button>
+                <button type="button" class="btn btn-primary mt-3">Chicago</button>
+                <button type="button" class="btn btn-primary mt-3">San Francisco</button>
+                <button type="button" class="btn btn-primary mt-3">Seattle</button>
+                <button type="button" class="btn btn-primary mt-3">Atlanta</button>
+                <button type="button" class="btn btn-primary mt-3">Houston</button>
+                <button type="button" class="btn btn-primary mt-3">Miami</button>
             </div>
         </div>
     </div>
-    <div class="forecast col-8">
-        <div class="single-day d-flex flex-row text-align">
+    <div class="forecast container-lg col-8">
+        <div class="single-day d-flex flex-row margin-top shadow-lg p-3 mb-5 bg-body rounded">
             
         </div>
         <div class="container">
             <h2>5-Day Forecast</h2>
         </div>
-        <div class="forecast-cards d-flex flex-row">
+        <div class="forecast-cards d-flex flex-md-row">
         </div>
     </div>
 </main>
@@ -58,12 +58,6 @@
         </div>
 
     </div> -->
-
-
-
-
-
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
